manifest/aws-cluster/backoffice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice
  template:
    metadata:
      labels:
        app: backoffice
    spec:
      containers:
        - name: backoffice
          image: darchlabs/backoffice:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
