manifest/aws-cluster/jobs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs
  template:
    metadata:
      labels:
        app: jobs
    spec:
      containers:
        - name: jobs
          image: darchlabs/jobs:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030
