manifest/aws-cluster/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: darchlabs/webapp:4.0.0
          ports:
            - containerPort: 3000
