manifest/aws-cluster/backoffice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
spec:
  selector:
    app: backoffice
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
