manifest/aws-cluster/jobs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jobs-service
spec:
  selector:
    app: jobs
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
