manifest/aws-cluster/postgres-backoffice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-backoffice-service
spec:
  selector:
    app: postgres-backoffice
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
