manifest/aws-cluster/synchronizers-service.yml
apiVersion: v1
kind: Service
metadata:
  name: synchronizers-service
spec:
  selector:
    app: synchronizers
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
