manifest/aws-cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darchlabs-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.darchlabs.com
        - synchronizers.darchlabs.com
      secretName: darchlabs-tls
  rules:
    - host: app.darchlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
    - host: synchronizers.darchlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synchronizers-service
                port:
                  number: 5555
    - host: jobs.darchlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobs-service
                port:
                  number: 3030
